Update Dockerfile to use eclipse-temurin:17-jdk

--- a/student-man-main/Dockerfile
+++ b/student-man-main/Dockerfile
@@ -1,5 +1,6 @@
 # Base officielle Eclipse Temurin (remplace openjdk:17-jdk-slim)
-FROM eclipse-temurin:17-jdk-slim
+FROM eclipse-temurin:17-jdk
+
 
 # Crée un volume temporaire (utile pour Spring Boot)
 VOLUME /tmp
